fix(logement): retour contraste et wording DPE

--- a/src/client/components/features/Logement/Consulter/BilanEnergetiqueLogement.module.scss
+++ b/src/client/components/features/Logement/Consulter/BilanEnergetiqueLogement.module.scss
@@ -2,7 +2,8 @@
 
 .energy .tag {
   --color-a: #008000;
-  --text-color-a: white;
+  --text-color-a: #FFFFFF;
+  --text-color-g: #FFFFFF;
   --color-b: #66CC33;
   --color-c: #CFDE24;
   --color-d: #FFFF00;
